--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <div class="col-md-4">
                     <div class="skill-item">
                         <h3>Frontend </h3>
-                        <p>Frontend Integreation Experience</p>
+                        <p>Frontend Integreation</p>
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -132,14 +132,14 @@
                     </a>
                 </div>
                 <div class="col-md-6">
-                    <a href="https://www.upload-apk.com/en/T1wuH2lsDSMtveM" class="project-link">
+                    <a href="https://scootaa.com" class="project-link">
                         <div class="project-card">
                             <div class="project-image">
-                                <img src="css/photos/tick.jpg" alt="Campus Attendance" class="img-fluid">
+                                <img src="css/photos/Frame 5.png" alt="Scooter EV Mobility" class="img-fluid">
                             </div>
                             <div class="project-content p-4">
-                                <h3>Realtime Location Based Attendance</h3>
-                                <p>Solving Attendance taking for campuses</p>
+                                <h3>Scooter EV Mobility</h3>
+                                <p>Mobile app for booking campus rides</p>
                                 <div class="tech-stack">
                                     <span class="badge bg-secondary">Flutter</span>
                                     <span class="badge bg-secondary">Python</span>
