--- a/index.html
+++ b/index.html
@@ -132,14 +132,14 @@
                     </a>
                 </div>
                 <div class="col-md-6">
-                    <a href="https://scootaa.com" class="project-link">
+                    <a href="https://librobase.com/" class="project-link">
                         <div class="project-card">
                             <div class="project-image">
-                                <img src="css/photos/Frame 5.png" alt="Scooter EV Mobility" class="img-fluid">
+                                <img src="css/photos/librobase.PNG" alt="Scooter EV Mobility" class="img-fluid">
                             </div>
                             <div class="project-content p-4">
-                                <h3>Scooter EV Mobility</h3>
-                                <p>Mobile app for booking campus rides</p>
+                                <h3>Librobase</h3>
+                                <p>The Social Hub For African Book Lovers </p>
                                 <div class="tech-stack">
                                     <span class="badge bg-secondary">Flutter</span>
                                     <span class="badge bg-secondary">Python</span>
