--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <div class="col-md-4">
                     <div class="skill-item">
                         <h3>Backend</h3>
-                        <p>Python, C++, MongoDB</p>
+                        <p>Python, Nodejs, MongoDB, Firebase, Postgres</p>
                     </div>
                 </div>
                 <div class="col-md-4">
